Added firebase config with simple login. Created a service to wrap login related concerns.

--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,13 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- endbuild -->
+
+    <link rel="stylesheet" href="bower_components/bootflat/css/bootflat.css" />
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-    <link rel="stylesheet" href="bower_components/bootflat/css/bootflat.css" />
   </head>
   <body ng-app="jukedogeApp">
     <!--[if lt IE 7]>
@@ -68,6 +71,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/services/firebase_url.js"></script>
+        <script src="scripts/services/loginservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
