--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,8 @@
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/services/firebase_url.js"></script>
         <script src="scripts/services/loginservice.js"></script>
+        <script src="scripts/services/peer_key.js"></script>
+        <script src="scripts/services/playlist_url.js"></script>
         <!-- endbuild -->
 </body>
 </html>
