--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+    <script src="bower_components/angular-audio-playlist/dist/angular-audio-player.min.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
