--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,9 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://ss14-team-72.divshot.io" data-text="Check out JukeDoge by Daruma Tactics" data-via="staticshowdown">Tweet</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
     <!-- Add your site or application content here -->
     <div class="container" ng-view=""></div>
 
