--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
+    <script src="http://connect.soundcloud.com/sdk.js"></script>
     <script src="bower_components/observe-js/src/observe.js"></script>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
