--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,8 @@
         <script src="scripts/services/loginservice.js"></script>
         <script src="scripts/services/peer_key.js"></script>
         <script src="scripts/services/playlist_url.js"></script>
+        <script src="scripts/controllers/user.js"></script>
+        <script src="scripts/services/soundcloud_id.js"></script>
         <!-- endbuild -->
 </body>
 </html>
