--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <link rel="stylesheet" href="bower_components/bootflat/css/bootflat.css" />
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Patrick+Hand" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- build:css({.tmp,app}) styles/main.css -->
