--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <!-- endbuild -->
 
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Patrick+Hand" />
+    <link rel="stylesheet" href="bower_components/animate.css/animate.min.css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- build:css({.tmp,app}) styles/main.css -->
