Can now view and play songs from another user's playlist.

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
         <script src="scripts/services/playlist_url.js"></script>
         <script src="scripts/controllers/user.js"></script>
         <script src="scripts/services/soundcloud_id.js"></script>
+        <script src="scripts/filters/possessive.js"></script>
         <!-- endbuild -->
 </body>
 </html>
