--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -69,6 +69,7 @@
         <script src="scripts/controllers/user.js"></script>
         <script src="scripts/services/soundcloud_id.js"></script>
         <script src="scripts/filters/possessive.js"></script>
+        <script src="scripts/services/favorite_url.js"></script>
         <!-- endbuild -->
 </body>
 </html>
