much better default font

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Patrick+Hand" />
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Coming+Soon" />
     <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
