--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <link rel="stylesheet" href="bower_components/ngprogress/ngProgress.css" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Coming+Soon" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
@@ -53,6 +54,7 @@
     <script src="bower_components/angularfire/angularfire.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-audio-playlist/dist/angular-audio-player.min.js"></script>
+    <script src="bower_components/ngprogress/build/ngProgress.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
